--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,11 +4,11 @@ spring.datasource.username=root
 spring.datasource.password=150919
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuración de Hibernate
+# Configuracion de Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 integration.marvel.base.path=http://gateway.marvel.com/v1/public
 integration.marvel.key.public=77bdc3d0aa5c4540034704cbebf64482
